--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,146 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Rubik+Moonrocks&family=Sansita+Swashed:wght@300;400;500;600;700;800;900&family=Teko:wght@300;400;500;600;700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#gameTitle {
+  font-size: 70px;
+  color: #072f2f;
+  font-family: "Rubik Moonrocks";
+}
+
+#container {
+  height: 100vh;
+  width: 100vw;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  background-image: url("/public/assets/bgPattern.png");
+}
+
+#dashboard {
+  position: relative;
+  height: 80px;
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 21px;
+  font-family: "Sansita Swashed";
+}
+#timeLeftLabel {
+  position: absolute;
+  left: 0;
+
+  display: flex;
+  align-items: center;
+}
+#movesMadeLabel {
+  position: absolute;
+  left: 31%;
+  display: flex;
+  align-items: center;
+}
+#currentScoreLabel {
+  position: absolute;
+  left: 60%;
+  display: flex;
+  align-items: center;
+}
+#timeLeft,
+#movesMade,
+#currentScore {
+  padding: 0px 3px;
+  font-size: 33px;
+  font-family: Teko;
+  transform: translateY(3px);
+}
+
+#restartBtn {
+  position: absolute;
+  right: 0;
+  padding: 3px 12px;
+  padding-right: 13px;
+  padding-bottom: 8px;
+
+  color: white;
+  border: none;
+  border-radius: 10px;
+  background-color: #1f6d3b;
+  font-size: 21px;
+  font-family: "Sansita Swashed";
+}
+
+#cardContainer {
+  position: relative;
+  /* height: 470px;
+  width: 470px; */
+  height: 470px;
+  width: 470px;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: space-evenly;
+
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.card {
+  height: 22%;
+  width: 22%;
+
+  border-radius: 10px;
+  background-color: transparent;
+  overflow: hidden;
+  perspective: 1000px;
+}
+.innerCard {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  border-radius: 10px;
+}
+.animateInnerCard {
+  transform: rotateY(180deg);
+}
+
+.cardFront,
+.cardBack {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 10px;
+}
+.cardFront {
+  background-color: #0d3939;
+}
+.cardBack {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #60dd8e;
+  transform: rotateY(180deg);
+}
+.cardImg {
+  height: 77%;
+  width: 77%;
+}
+
+#winner {
+  position: absolute;
+  top: 20px;
+  font-size: 25px;
+  font-family: Teko;
 }
