--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,12 @@
 
   border-radius: 10px;
   overflow: hidden;
+
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
 }
 
 .card {
@@ -99,6 +105,12 @@
   background-color: transparent;
   overflow: hidden;
   perspective: 1000px;
+
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
 }
 .innerCard {
   position: relative;
@@ -107,9 +119,6 @@
   transition: transform 1s;
   transform-style: preserve-3d;
   border-radius: 10px;
-}
-.animateInnerCard {
-  transform: rotateY(180deg);
 }
 
 .cardFront,
@@ -128,8 +137,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #60dd8e;
   transform: rotateY(180deg);
+  transition: background-Color 0.6s linear;
 }
 .cardImg {
   height: 77%;
@@ -138,7 +147,20 @@
 
 #winner {
   position: absolute;
-  top: 20px;
+  top: 35%;
   font-size: 25px;
   font-family: Teko;
+}
+
+.vanish {
+  animation: divDisappear 0.7s ease-out 0s 1 normal forwards;
+}
+
+@keyframes divDisappear {
+  from {
+    opacity: 100%;
+  }
+  to {
+    opacity: 0%;
+  }
 }
