--- a/src/index.css
+++ b/src/index.css
@@ -79,8 +79,10 @@
 
 #cardContainer {
   position: relative;
-  height: 470px;
-  width: 470px;
+  height: 100%;
+  /* max-height: 470px; */
+  width: 100%;
+  /* max-width: 470px; */
 
   display: flex;
   flex-wrap: wrap;
@@ -141,8 +143,10 @@
   transition: background-Color 0.6s linear;
 }
 .cardImg {
-  height: 77%;
-  width: 77%;
+  height: 100%;
+  max-height: 77%;
+  width: 100%;
+  max-width: 77%;
 }
 
 #winner {
